// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`posix 1`] = `
PathWrap {
  "default": PathWrap {
    "PathWrap": [Function],
    "default": [Circular],
    "fn": PathWrap {
      "_makeLong": [Function],
      "default": [Circular],
      "delimiter": ";",
      "filterNameEntry": [Function],
      "fn": PathWrap {
        "basename": [Function],
        "constructor": [Function],
        "dirname": [Function],
        "extname": [Function],
        "fn": [Circular],
        "format": [Function],
        "isAbsolute": [Function],
        "join": [Function],
        "normalize": [Function],
        "parse": [Function],
        "relative": [Function],
        "resolve": [Function],
        "sep": "/",
      },
      "posix": [Circular],
      "sep": "/",
      "toNamespacedPath": [Function],
      "upath": [Circular],
      "vaildNameEntry": [Function],
      "win32": PathWrap {
        "default": [Circular],
        "fn": [Circular],
        "name": "win32",
        "sep": "/",
        "win32": [Circular],
      },
    },
    "name": "upath",
    "sep": "/",
    "upath": [Circular],
  },
  "fn": PathWrap {
    "_makeLong": [Function],
    "default": PathWrap {
      "PathWrap": [Function],
      "default": [Circular],
      "fn": [Circular],
      "name": "upath",
      "sep": "/",
      "upath": [Circular],
    },
    "delimiter": ";",
    "filterNameEntry": [Function],
    "fn": PathWrap {
      "basename": [Function],
      "constructor": [Function],
      "dirname": [Function],
      "extname": [Function],
      "fn": [Circular],
      "format": [Function],
      "isAbsolute": [Function],
      "join": [Function],
      "normalize": [Function],
      "parse": [Function],
      "relative": [Function],
      "resolve": [Function],
      "sep": "/",
    },
    "posix": [Circular],
    "sep": "/",
    "toNamespacedPath": [Function],
    "upath": PathWrap {
      "PathWrap": [Function],
      "default": [Circular],
      "fn": [Circular],
      "name": "upath",
      "sep": "/",
      "upath": [Circular],
    },
    "vaildNameEntry": [Function],
    "win32": PathWrap {
      "default": PathWrap {
        "PathWrap": [Function],
        "default": [Circular],
        "fn": [Circular],
        "name": "upath",
        "sep": "/",
        "upath": [Circular],
      },
      "fn": [Circular],
      "name": "win32",
      "sep": "/",
      "win32": [Circular],
    },
  },
  "name": "posix",
  "posix": [Circular],
  "sep": "/",
}
`;

exports[`win32 1`] = `
PathWrap {
  "default": PathWrap {
    "PathWrap": [Function],
    "default": [Circular],
    "fn": PathWrap {
      "_makeLong": [Function],
      "default": [Circular],
      "delimiter": ";",
      "filterNameEntry": [Function],
      "fn": PathWrap {
        "basename": [Function],
        "constructor": [Function],
        "dirname": [Function],
        "extname": [Function],
        "fn": [Circular],
        "format": [Function],
        "isAbsolute": [Function],
        "join": [Function],
        "normalize": [Function],
        "parse": [Function],
        "relative": [Function],
        "resolve": [Function],
        "sep": "/",
      },
      "posix": PathWrap {
        "default": [Circular],
        "fn": [Circular],
        "name": "posix",
        "posix": [Circular],
        "sep": "/",
      },
      "sep": "/",
      "toNamespacedPath": [Function],
      "upath": [Circular],
      "vaildNameEntry": [Function],
      "win32": [Circular],
    },
    "name": "upath",
    "sep": "/",
    "upath": [Circular],
  },
  "fn": PathWrap {
    "_makeLong": [Function],
    "default": PathWrap {
      "PathWrap": [Function],
      "default": [Circular],
      "fn": [Circular],
      "name": "upath",
      "sep": "/",
      "upath": [Circular],
    },
    "delimiter": ";",
    "filterNameEntry": [Function],
    "fn": PathWrap {
      "basename": [Function],
      "constructor": [Function],
      "dirname": [Function],
      "extname": [Function],
      "fn": [Circular],
      "format": [Function],
      "isAbsolute": [Function],
      "join": [Function],
      "normalize": [Function],
      "parse": [Function],
      "relative": [Function],
      "resolve": [Function],
      "sep": "/",
    },
    "posix": PathWrap {
      "default": PathWrap {
        "PathWrap": [Function],
        "default": [Circular],
        "fn": [Circular],
        "name": "upath",
        "sep": "/",
        "upath": [Circular],
      },
      "fn": [Circular],
      "name": "posix",
      "posix": [Circular],
      "sep": "/",
    },
    "sep": "/",
    "toNamespacedPath": [Function],
    "upath": PathWrap {
      "PathWrap": [Function],
      "default": [Circular],
      "fn": [Circular],
      "name": "upath",
      "sep": "/",
      "upath": [Circular],
    },
    "vaildNameEntry": [Function],
    "win32": [Circular],
  },
  "name": "win32",
  "sep": "/",
  "win32": [Circular],
}
`;
